--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,13 @@
 spring.application.name=portal
 server.port=8000
 
-
-#Security settings
+# Security settings
 spring.security.user.name=admin
 spring.security.user.password=admin123
 
-
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/monitoring
-spring.datasource.username=root
-spring.datasource.password=#Ankit5
-
+spring.profiles.active=dev
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.dll.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
